--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "roblox-search-api",
+  "name": "roblox-ara-api",
   "version": "1.0.0",
-  "main": "api/index.js",
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.18.2"
